--- a/app/src/main/res/layout/fragment_flashcard.xml
+++ b/app/src/main/res/layout/fragment_flashcard.xml
@@ -6,43 +6,43 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/stickyView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#4C8492"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:text="Study"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:id="@+id/flashcardFront"
+        android:layout_width="297dp"
+        android:layout_height="259dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/flashcard_front"
+        android:padding="25dp"
+        android:text="Word/phrase"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:elevation="18dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/flashcardTv"
+        android:id="@+id/flashcardBack"
         android:layout_width="297dp"
         android:layout_height="259dp"
         android:layout_marginTop="60dp"
-        android:background="@color/text_shadow_white"
-        android:elevation="18dp"
-        android:gravity="center"
+        android:background="@drawable/flashcard_back"
         android:padding="25dp"
         android:text="Word/phrase"
-        android:textAlignment="center"
-        android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:elevation="18dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stickyView"
-        app:layout_constraintVertical_bias="0.027" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/correct_imageButton"
-        android:layout_width="116dp"
-        android:layout_height="122dp"
+        android:id="@+id/correct_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginBottom="156dp"
         android:adjustViewBounds="true"
         android:padding="0dp"
@@ -51,26 +51,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.806"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/flashcardTv"
+        app:layout_constraintTop_toBottomOf="@+id/flashcardFront"
         app:layout_constraintVertical_bias="0.964"
         tools:srcCompat="@drawable/screen_shot_2023_04_14_at_8_59_41_pm" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="116dp"
-        android:layout_height="122dp"
+        android:id="@+id/incorrect_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="60dp"
         android:layout_marginBottom="160dp"
         android:adjustViewBounds="true"
         android:padding="0dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/correct_imageButton"
+        app:layout_constraintEnd_toStartOf="@+id/correct_button"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/flashcardTv"
+        app:layout_constraintTop_toBottomOf="@+id/flashcardFront"
         app:layout_constraintVertical_bias="1.0"
         tools:srcCompat="@drawable/screen_shot_2023_04_14_at_8_59_54_pm" />
+
+    <Button
+        android:id="@+id/save_changes_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Changes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/correct_button"
+        app:layout_constraintStart_toEndOf="@+id/incorrect_button"
+        app:layout_constraintTop_toBottomOf="@+id/correct_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
