--- a/app/src/main/res/layout/fragment_vocab_list.xml
+++ b/app/src/main/res/layout/fragment_vocab_list.xml
@@ -41,7 +41,7 @@
         android:layout_marginEnd="100dp"
         android:backgroundTint="#37306B"
         android:padding="0dp"
-        android:text="Back"
+        android:text="Save"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
