--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
+    <color name="bittersweet">#ee6352</color>
+    <color name="emerald">#59cd90</color>
+    <color name="picton">#3fa7d6</color>
+    <color name="xanthous">#fac05e</color>
+    <color name="tangerine">#f79d84</color>
+    <color name="mindaro">#e9eb87</color>
 </resources>
