--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/shopping_imageButton"
@@ -12,13 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
+        android:contentDescription="@string/shopping_category"
         android:background="@drawable/round_corner"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/places_imageButton"
-        app:srcCompat="@drawable/screen_shot_2023_04_07_at_11_13_03_pm" />
+        app:srcCompat="@drawable/shopping" />
 
     <ImageButton
         android:id="@+id/tourist_imageButton"
@@ -28,11 +27,11 @@
         android:adjustViewBounds="true"
         android:background="@drawable/round_corner"
         android:scaleType="fitStart"
+        android:contentDescription="@string/tourist_category"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/common_words_imageButton"
-        app:srcCompat="@drawable/screen_shot_2023_04_07_at_10_24_47_pm" />
+        app:srcCompat="@drawable/tourist" />
 
     <ImageButton
         android:id="@+id/food_imageButton"
@@ -41,12 +40,12 @@
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         android:background="@drawable/round_corner"
+        android:contentDescription="@string/food_category"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tourist_imageButton"
-        app:srcCompat="@drawable/screen_shot_2023_04_07_at_6_43_00_pm" />
+        app:srcCompat="@drawable/food" />
 
     <ImageButton
         android:id="@+id/common_words_imageButton"
@@ -56,11 +55,11 @@
         android:adjustViewBounds="true"
         android:background="@drawable/round_corner"
         android:scaleType="fitStart"
+        android:contentDescription="@string/most_common_words"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/screen_shot_2023_04_07_at_10_14_10_pm" />
+        app:srcCompat="@drawable/common_words" />
 
     <ImageButton
         android:id="@+id/places_imageButton"
@@ -70,9 +69,10 @@
         android:adjustViewBounds="true"
         android:background="@drawable/round_corner"
         android:scaleType="fitCenter"
+        android:contentDescription="@string/places_category"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/food_imageButton"
-        app:srcCompat="@drawable/screen_shot_2023_04_08_at_4_37_57_pm" />
+        app:srcCompat="@drawable/places" />
 </androidx.constraintlayout.widget.ConstraintLayout>
